<resources>
    <string name="app_name">Android Mapper</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="new_beatmap_title">Create new Beatmap</string>
    <string name="new_difficulty_title">Create new Difficulty</string>
    <string name="create">Create</string>
    <string name="invalid_beatmap_name">Invalid beatmap data. Does it already exist or use illegal characters?</string>
    <string name="difficulty_already_exists">Difficulty already exists.</string>
    <string name="browse_song">Select Song</string>
    <string name="no_song_file">No song file found</string>
    <string name="refresh">Refresh</string>

    <string name="delete">Delete</string>

    <string name="beatmap">Beatmap</string>
    <string name="songName">Song Name</string>
    <string name="songSubName">Song Sub Name</string>
    <string name="songAuthor">Song Author</string>
    <string name="levelAuthor">Level Author</string>
    <string name="bpm">BPM</string>

    <string name="defaultEnvironment">DefaultEnvironment</string>
    <string name="bigMirrorEnvironment">BigMirrorEnvironment</string>
    <string name="triangleEnvironment">TriangleEnvironment</string>
    <string name="niceEnvironment">NiceEnvironment</string>
    <string name="KDAEnvironment">KDAEnvironment</string>
    <string name="monstercatEnvironment">MonstercatEnvironment</string>

    <string name="standard">Standard</string>
    <string name="noArrows">No Arrows</string>
    <string name="oneSaber">One Saber</string>
    <string name="lawless">Lawless</string>
    <string name="lightshow">Lightshow></string>

    <string name="njs">Note Jump Speed</string>
    <string name="defaultNjs">12</string>
    <string name="empty"> </string>

    <string name="action_save">Save</string>
    <string name="action_preview">Preview</string>
    <string name="action_exit">Exit</string>

    <string name="edit">Edit</string>

    <string name="tools_title">Tools</string>
    <string name="tools_note">Note</string>
    <string name="tools_note_blue">Blue Note</string>
    <string name="tools_note_red">Red Note</string>
    <string name="tools_bomb">Bomb</string>
    <string name="tools_wall">Wall</string>
    <string name="tools_eraser">Eraser</string>

    <string name="dialog_error_title">An error occurred</string>
    <string name="dialog_notify_title">Important:</string>
    <string name="feature_missing">Feature not yet implemented</string>
    <string name="placeholder">&lt;placeholder&gt;</string>
    <string name="dialog_permissions_not_granted">You didn\'t grant external storage writing permissions, which AndroidMapper relies on. Closing app</string>
    <string name="dialog_about">AndroidMapper © Stefan Heinz 2019.\n\nThanks to BeatGames for creating Beat Saber and thanks to all the early testers for supporting this project early on.</string>
    <string name="error_incorrect_file">Incorrect file path</string>
    <string name="error_no_song">No song</string>

    <string name="theme_dark">Dark Theme</string>
    <string name="theme_light">Light Theme</string>

    <string name="section_visual">Visual</string>
    <string name="section_functional">Functional</string>
    <string name="section_convenience">Convenience</string>

    <string name="setting_theme">Dark theme</string>
    <string name="setting_use_custom_color">Use custom color in editor</string>
    <string name="setting_default_level_author">Default level author</string>
    <string name="setting_sub_beat_count">Sub Beat count</string>
    <string name="setting_sub_beat_count_hint">Default: 4</string>
    <string name="setting_debug">Debug Mode</string>

    <string name="preferences_saved">Preferences Saved</string>
    <string name="preferences_disclaimer">My require restart to take effect</string>

    <string name="message_unsaved_changes">Do you want to discard your unsaved changes?</string>
    <string name="title_unsaved_changes">Unsaved Changes</string>

    <string name="message_editor_exit">Unsaved progress will be lost!!</string>
    <string name="title_editor_exit">Are you sure about that?</string>

</resources>
