<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/new_difficulty_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/new_difficulty_njs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/njs"
        android:inputType="number"
        android:text="@string/defaultNjs" />

    <Button
        android:id="@+id/new_difficulty_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />

</LinearLayout>